hphp/hack/test/typecheck/constraint_newtype_param_type_3.php.exp
File "constraint_newtype_param_type_3.php", line 8, characters 15-21:
Some type arguments violate their constraints (Typing[4323])
  File "constraint_newtype_param_type_3.php", line 5, characters 11-11:
  `T` is a constrained type parameter
  File "constraint_newtype_param_type_3.php", line 5, characters 16-26:
  This type constraint is violated
  File "constraint_newtype_param_type_3.php", line 5, characters 18-25:
  Expected `arraykey`
  File "constraint_newtype_param_type_3.php", line 8, characters 17-20:
  But got `bool`
  File "constraint_newtype_param_type_3.php", line 6, characters 17-17:
    via this generic `T`
